# camulate

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  to_do.txt
src/cam_modeller/: cam_follower.rs  cam_system.rs  helper_functions.rs  mod.rs  movement_laws_rest.rs  movement_laws_rest_rest.rs  movement_laws_rest_return.rs  process_forces.rs
src/gui/: app.rs  helper_functions.rs  mod.rs  ui_cam_system.rs  ui_follower_modification.rs  ui_process_forces.rs
