[package]
name = "camulate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = { version = "0.24.0", features = ["serde"] }
egui_plot = "0.24.0"
env_logger = "0.10.0"
serde = {version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tinyfiledialogs = "3.9.1"
